# GPT_examples_generator

./: .behaverc  .coveragerc  .env  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  check_semver.py  fastapi_info.txt  requirements.txt  run_behave_tests.py  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.md  index.rst
features/: 01_requirements.feature  02_fastapi.feature  enviroment.py  fastapi.feature
features/steps/: fastapi.py  requirements.py  steps.py
src/: main.py
src/gpt_examples_generator/: __init__.py  app.py  skeleton.py
tests/: conftest.py  test_skeleton.py
