[metadata]
name = GPT_examples_generator
description = A symple example creator to train your GPT-based-AI
author = Juan Jose Alban Ortiz
author_email = j.alban@uniandes.edu.co
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/SageWizards/GPT_examples_generator
project_urls =
    Documentation = https://pyscaffold.org/

platforms = any

classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    importlib-metadata; python_version<"3.8"
    fastapi
    uvicorn

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    behave
    pytest
    pytest-cov
    httpx

[options.entry_points]

[tool:pytest]
addopts =
    --cov gpt_examples_generator --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.4
package = gpt_examples_generator
extensions =
    github_actions
    markdown
    pre_commit
